--- a/app/page2.html
+++ b/app/page2.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="/build/index.js"></script>
+    <script src="/build/page2.js"></script>
 </body>
 </html>
